# cpu-optimizer-bg3

./: .gitignore  Cargo.toml  CpuOptimizer.ini  pack.py
.github/workflows/: build.yml
[OPTIONAL] regedit/: install.reg  uninstall.reg
src/: lib.rs  logger.rs  types.rs
